--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#guest-img {
+  -webkit-mask-image: url(/DPFP.png);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: contain;
+  mask-image: url(/DPFP.png);
+  mask-repeat: no-repeat;
+  mask-size: contain;
+}
